# smoker

./: .gitignore
prober/: notes.md  pyproject.toml
prober/src/: main.py  wifi.py
prober/src/umqtt/: simple.py
server/: docker-compose.yml  main.py  mqtt_client.py  pyproject.toml
server/grafana/dashboard/: datasource.json  post.sh  temps.json
server/postgres/sql/: init.sql
