[tool.poetry]
name = "prober"
version = "0.1.0"
description = ""
authors = ["Ben Gazzard <ben@dartoxia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uflash = "^2.0.0"
docopt = "^0.6.2"
pyserial = "^3.5"
adafruit-ampy = "~1.0.5"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
